--- a/app/profile-questions.html
+++ b/app/profile-questions.html
@@ -719,43 +719,23 @@
                             </div>
                             <div class="list">
                                 <div class="item question">
+                                    <ul class="category breadcrumbs">
+                                        <li><a href="questions.html">Вопрос-ответ</a></li>
+                                        <li><a href="questions.html">Ваз-2108, Ваз-2109, Ваз-2115, Ваз-2110, Ваз-1117 Калина, Ваз-2170 Приора</a></li>
+                                    </ul>
                                     <div class="item-content">
                                         <a href="profile.html" class="user-avatar">
                                             <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                         </a>
-                                        <div>
-                                            <div class="item-title">
-                                                <ul class="category breadcrumbs">
-                                                    <li><a href="category.html">Вопрос-ответ</a></li>
-                                                    <li><a href="category.html">Ваз-2108, Ваз-2109, Ваз-2115, Ваз-2110, Ваз-1117 Калина, Ваз-2170 Приора</a></li>
-                                                </ul>
-                                                <h3>
-                                                    <a href="page.html">
-                                                        Свист коробки передач ваз 21099
-                                                    </a>
-                                                </h3>
-                                            </div>
-                                            <!--<div class="text item-text">-->
-                                            <!--<p>Все здравствуйте.</p>-->
-                                            <!--<p>-->
-                                            <!--Суть вопроса такова. Автомобиль ваз 21099, полгода-->
-                                            <!--назад ремонтировалась кпп по причине того, что она-->
-                                            <!--просто заклинила, передачи не включались. Менялись-->
-                                            <!--все сальники, подшипники, первичный вал.-->
-                                            <!--</p>-->
-                                            <!--<p>-->
-                                            <!--Месяц назад начался хруст на нейтрале,-->
-                                            <!--при выжатом сцеплении шум полностью пропадал,-->
-                                            <!--несколько дней назад заменил масло в коробке и-->
-                                            <!--сегодня коробка просто начала свистеть, не шуметь,-->
-                                            <!--а именно свистеть, при выжатом сцеплении опять-таки-->
-                                            <!--все становится нормально, так же свист присутствует-->
-                                            <!--на первой передаче на низких оборотах.-->
-                                            <!--</p>-->
-                                            <!--</div>-->
+                                        <div class="item-title">
+                                            <h3>
+                                                <a href="question.html">
+                                                    Свист коробки передач ваз 21099
+                                                </a>
+                                            </h3>
                                         </div>
                                         <div class="answers-count" title="Количество ответов">
-                                            <a href="page.html#answers">
+                                            <a href="question.html#answers">
                                                 <span class="count" itemprop="commentCount">0</span>
                                                 <span class="title">ответов</span>
                                             </a>
@@ -798,7 +778,7 @@
                                     </div>
                                     <div class="tags">
                                         <a href="#">
-                                            <span>Daewoo Lanos</span>
+                                            <span>Daewoo</span>
                                             <span class="count">234</span>
                                         </a>
                                         <a href="#">
@@ -813,45 +793,23 @@
                                     </div>
                                 </div>
                                 <div class="item question">
+                                    <ul class="category breadcrumbs">
+                                        <li><a href="questions.html">Вопрос-ответ</a></li>
+                                        <li><a href="questions.html">Daewoo Lanos, Nexia, Sens, Matiz, Nubira</a></li>
+                                    </ul>
                                     <div class="item-content">
                                         <a href="profile.html" class="user-avatar">
                                             <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                         </a>
-                                        <div>
-                                            <div class="item-title">
-                                                <ul class="category breadcrumbs">
-                                                    <li><a href="category.html">Вопрос-ответ</a></li>
-                                                    <li><a href="category.html">Daewoo Lanos, Nexia, Sens, Matiz, Nubira</a></li>
-                                                </ul>
-                                                <h3>
-                                                    <a href="page.html">
-                                                        Можно ли ездить со сломанной передней пружиной?
-                                                    </a>
-                                                </h3>
-                                            </div>
-                                            <!--<div class="text item-text">-->
-                                            <!--<p>-->
-                                            <!--Добрый день. Я начинающий водитель. Машина Дэу Ланос 2008 год.-->
-                                            <!--Скажите, пожалуйста: недели две назад мною был услышан-->
-                                            <!--посторонний звук (как-будто металл по металлу), стучит в-->
-                                            <!--районе левого переднего колеса. Буквально два дня назад-->
-                                            <!--ехал за городом и звук усилился. Делал остановки, осматривал-->
-                                            <!--колесо, ничего там не находил. И вот при скорости примерно-->
-                                            <!--70 км в час, что-то вылетело с колеса и покатилось, остановился-->
-                                            <!--и нашел половину витка от пружины, такое чувство как будто-->
-                                            <!--он был лишним там, полувиток в форме русской буквы "С".-->
-                                            <!--Осмотрел пружины, всё вроде на месте. Не пойму, где этот-->
-                                            <!--виток откололся. Поехал дальше, звук сразу же пропал.-->
-                                            <!--Ехал и 70 км в час и 120 км в час, звуков посторонних-->
-                                            <!--не было, управляемость вроде не поменялась никак. Скажите:-->
-                                            <!--как срочно мне "светит" поездка на СТО и какой риск-->
-                                            <!--передвижения на авто, в багажнике которого лежит этот виток-->
-                                            <!--в форме полумесяца? Спасибо.-->
-                                            <!--</p>-->
-                                            <!--</div>-->
+                                        <div class="item-title">
+                                            <h3>
+                                                <a href="question.html">
+                                                    Можно ли ездить со сломанной передней пружиной?
+                                                </a>
+                                            </h3>
                                         </div>
                                         <div class="answers-count" title="Количество ответов">
-                                            <a href="page.html#answers">
+                                            <a href="question.html#answers">
                                                 <span class="count" itemprop="commentCount">23</span>
                                                 <span class="title">ответа</span>
                                             </a>
@@ -904,18 +862,18 @@
                                     </div>
                                 </div>
                                 <div class="item question has-solution">
+                                    <ul class="category breadcrumbs">
+                                        <li><a href="questions.html">Вопрос-ответ</a></li>
+                                        <li><a href="questions.html">Ваз 2101-2107 Жигули, Классика</a></li>
+                                    </ul>
                                     <div class="item-content">
                                         <a href="profile.html" class="user-avatar">
                                             <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                         </a>
                                         <div>
                                             <div class="item-title">
-                                                <ul class="category breadcrumbs">
-                                                    <li><a href="category.html">Вопрос-ответ</a></li>
-                                                    <li><a href="category.html">Ваз 2101-2107 Жигули, Классика</a></li>
-                                                </ul>
                                                 <h3>
-                                                    <a href="page.html">Надо ли делать развал схождение после замены сальников рулевой колонки колонки колонки на ваз 2106?</a>
+                                                    <a href="question.html">Надо ли делать развал схождение после замены сальников рулевой колонки колонки колонки на ваз 2106?</a>
                                                 </h3>
                                             </div>
                                             <div class="text item-text">
@@ -930,7 +888,7 @@
                                             </div>
                                         </div>
                                         <div class="answers-count" title="Количество ответов">
-                                            <a href="page.html#answers">
+                                            <a href="question.html#answers">
                                                 <span class="count" itemprop="commentCount">2 213</span>
                                                 <span class="title">ответов</span>
                                             </a>
@@ -1451,7 +1409,8 @@
             data.addColumn('number', 'Slices');
             data.addRows([
                 ['Решенные', 12],
-                ['Без ответов', 5]
+                ['Без ответов', 5],
+                ['Не решенные', 9]
             ]);
 
             // Set chart options
@@ -1469,8 +1428,9 @@
                 },
                 is3D: true,
                 slices: {
-                    0: { color: '#0095D8' },
-                    1: { color: '#9A9DA0' }
+                    0: { color: '#26b713' },
+                    1: { color: '#9A9DA0' },
+                    2: { color: '#0095D8' }
                 }
             };
 
