Сортировка (выпадающий список, направление сортировки).

--- a/app/questions.html
+++ b/app/questions.html
@@ -637,14 +637,37 @@
                                         <div class="dropdown-container">
                                             <div class="container-body">
                                                 <ul class="select-list">
-                                                    <li data-value="published_at selected">дате</li>
-                                                    <li data-value="popular">рейтингу (оценке)</li>
-                                                    <li data-value="price">просмотрам</li>
-                                                    <li data-value="rating">комментариям</li>
-                                                    <li data-value="popular">количеству сохранивших</li>
+                                                    <li data-value="published_at selected">
+                                                        <i class="fa fa-calendar-o"></i>
+                                                        <span>дате</span>
+                                                    </li>
+                                                    <li data-value="popular">
+                                                        <i class="fa fa-thumbs-o-up"></i>
+                                                        <span>рейтингу (оценке)</span>
+                                                    </li>
+                                                    <li data-value="price">
+                                                        <i class="fa fa-eye"></i>
+                                                        <span>просмотрам</span>
+                                                    </li>
+                                                    <li data-value="rating">
+                                                        <i class="fa fa-comments-o"></i>
+                                                        <span>ответам</span>
+                                                    </li>
+                                                    <li data-value="popular">
+                                                        <i class="fa fa-heart-o"></i>
+                                                        <span>количеству сохранивших</span>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="direction">
+                                        <button data-value="desc" title="По убыванию" class="active">
+                                            <i class="fa fa-angle-down"></i>
+                                        </button>
+                                        <button data-value="asc" title="По возростанию">
+                                            <i class="fa fa-angle-up"></i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
