Адаптивность страницы вопросов. Мелкие правки.

--- a/app/profile-questions.html
+++ b/app/profile-questions.html
@@ -634,16 +634,16 @@
                                     <i class="fa fa-newspaper-o"></i>
                                     Подписаться
                                 </button>
-                                <button class="button default-button">
+                                <a href="profile-subscribers.html" class="button default-button">
                                     <i class="fa fa-users"></i>
                                     890
-                                </button>
+                                </a>
                             </div>
 
                             <!-- Для своего профиля -->
                             <!--<div class="item subscribers">-->
-                                <!--<span class="count">890</span>-->
-                                <!--<a href="#">подписчиков</a>-->
+                            <!--<span class="count">890</span>-->
+                            <!--<a href="#">подписчиков</a>-->
                             <!--</div>-->
 
                             <div class="item rating">
@@ -655,19 +655,19 @@
                         <div class="pull-right">
                             <div class="item articles">
                                 <span class="count">12</span>
-                                <a href="#">статей</a>
+                                <a href="profile-articles.html">статей</a>
                             </div>
                             <div class="item questions">
                                 <span class="count">3</span>
-                                <a href="#">вопроса</a>
+                                <a href="profile-questions.html">вопроса</a>
                             </div>
                             <div class="item answers">
                                 <span class="count">129</span>
-                                <a href="#">ответов</a>
+                                <a href="profile-answers.html">ответов</a>
                             </div>
                             <div class="item comments">
                                 <span class="count">3 245</span>
-                                <a href="#">комментариев</a>
+                                <a href="profile-comments.html">комментариев</a>
                             </div>
                         </div>
                     </div>
@@ -1431,9 +1431,9 @@
             data.addColumn('string', 'Topping');
             data.addColumn('number', 'Slices');
             data.addRows([
-                ['Решенные', 12],
+                ['Решённые', 12],
                 ['Без ответов', 5],
-                ['Не решенные', 9]
+                ['Не решённые', 9]
             ]);
 
             // Set chart options
