--- a/app/profile.html
+++ b/app/profile.html
@@ -634,10 +634,10 @@
                                     <i class="fa fa-newspaper-o"></i>
                                     Подписаться
                                 </button>
-                                <button class="button default-button">
+                                <a href="profile-subscribers.html" class="button default-button">
                                     <i class="fa fa-users"></i>
                                     890
-                                </button>
+                                </a>
                             </div>
 
                             <!-- Для своего профиля -->
@@ -655,19 +655,19 @@
                         <div class="pull-right">
                             <div class="item articles">
                                 <span class="count">12</span>
-                                <a href="#">статей</a>
+                                <a href="profile-articles.html">статей</a>
                             </div>
                             <div class="item questions">
                                 <span class="count">3</span>
-                                <a href="#">вопроса</a>
+                                <a href="profile-questions.html">вопроса</a>
                             </div>
                             <div class="item answers">
                                 <span class="count">129</span>
-                                <a href="#">ответов</a>
+                                <a href="profile-answers.html">ответов</a>
                             </div>
                             <div class="item comments">
                                 <span class="count">3 245</span>
-                                <a href="#">комментариев</a>
+                                <a href="profile-comments.html">комментариев</a>
                             </div>
                         </div>
                     </div>
@@ -687,6 +687,11 @@
                         </div>
 
                         <h2>Профиль пользователя Ivan</h2>
+
+                        <div class="small-description m-t--15">
+                            В сообществе Avtorem.info уже
+                            <span class="date">1 год 10 месяцев 12 дней</span>
+                        </div>
 
                         <div class="row">
                             <div class="col-md-8 col-sm-8">
