--- a/app/questions.html
+++ b/app/questions.html
@@ -561,7 +561,7 @@
                             </li>
                         </ul>
 
-                        <div class="table-block page-title">
+                        <div class="table-block page-title enter-xxs">
                             <h2 class="responsive-block p-r-25">Вопрос-ответ</h2>
                             <div class="fixed-block">
                                 <a href="#" class="button accent-button">
@@ -628,7 +628,7 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего вопросов: <span class="count">34</span>
+                                    Всего<span class="hidden-xxs"> вопросов</span>: <span class="count">34</span>
                                 </div>
                                 <div class="sort">
                                     <span>Сортировать по:</span>
@@ -672,12 +672,17 @@
                                 </div>
                             </div>
                             <div class="filters">
-                                <button class="button default-button dashed-button">
-                                    <span>Без ответов</span>
-                                </button>
-                                <button class="button default-button dashed-button active">
-                                    <span>Нерешённые</span>
-                                </button>
+                                <div class="pull-right">
+                                    <button class="button default-button dashed-button small-button">
+                                        <span>Без ответов</span>
+                                    </button>
+                                    <button class="button accent-button dashed-button small-button active">
+                                        <span>Нерешённые</span>
+                                    </button>
+                                    <button class="button accent-button dashed-button small-button">
+                                        <span>Решённые</span>
+                                    </button>
+                                </div>
                             </div>
                             <div class="list">
                                 <div class="item question">
