--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -368,7 +368,7 @@
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
-                                                <a href="#" class="title">
+                                                <a href="profile.html" class="title">
                                                     <i class="fa fa-user"></i>
                                                     Мой профиль
                                                 </a>
