Адаптивность карты сайта, области "Всего страниц".

--- a/app/profile-answers.html
+++ b/app/profile-answers.html
@@ -688,7 +688,8 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего ответов: <span class="count">1</span>
+                                    Всего<span class="hidden-xxs"> ответов</span>:
+                                    <span class="count">1</span>
                                 </div>
                             </div>
                             <div class="list">
