--- a/app/profile-articles.html
+++ b/app/profile-articles.html
@@ -688,7 +688,8 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего статей: <span class="count">121</span>
+                                    Всего<span class="hidden-xxs"> статей</span>:
+                                    <span class="count">121</span>
                                 </div>
                                 <div class="sort">
                                     <span>Сортировать по:</span>
