--- a/app/profile-questions.html
+++ b/app/profile-questions.html
@@ -697,7 +697,8 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего вопросов: <span class="count">21</span>
+                                    Всего<span class="hidden-xxs"> вопросов</span>:
+                                    <span class="count">21</span>
                                 </div>
                                 <div class="sort">
                                     <span>Сортировать по:</span>
