--- a/app/profile-notifications.html
+++ b/app/profile-notifications.html
@@ -688,7 +688,8 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего уведомлений: <span class="count">11</span>
+                                    Всего<span class="hidden-xxs"> уведомлений</span>:
+                                    <span class="count">11</span>
                                 </div>
                             </div>
                             <div class="list">
