--- a/app/questions.html
+++ b/app/questions.html
@@ -628,7 +628,8 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего<span class="hidden-xxs"> вопросов</span>: <span class="count">34</span>
+                                    Всего<span class="hidden-xxs"> вопросов</span>:
+                                    <span class="count">34</span>
                                 </div>
                                 <div class="sort">
                                     <span>Сортировать по:</span>
