Адаптивность статистики пользователя в профиле (для lg и md).

--- a/app/profile.html
+++ b/app/profile.html
@@ -636,7 +636,7 @@
                                 </button>
                                 <a href="profile-subscribers.html" class="button default-button">
                                     <i class="fa fa-users"></i>
-                                    890
+                                    124 890
                                 </a>
                             </div>
 
@@ -647,28 +647,34 @@
                             <!--</div>-->
 
                             <div class="item rating">
-                                <span>Рейтинг:</span>
-                                <span class="count">1 416</span>
+                                <!--<span>Рейтинг:</span>-->
+                                <i class="fa fa-signal" title="Рейтинг"></i>
+                                <span class="count">31 416</span>
                             </div>
                         </div>
 
                         <div class="pull-right">
-                            <div class="item articles">
-                                <span class="count">12</span>
-                                <a href="profile-articles.html">статей</a>
-                            </div>
-                            <div class="item questions">
-                                <span class="count">3</span>
-                                <a href="profile-questions.html">вопроса</a>
-                            </div>
-                            <div class="item answers">
-                                <span class="count">129</span>
-                                <a href="profile-answers.html">ответов</a>
-                            </div>
-                            <div class="item comments">
-                                <span class="count">3 245</span>
-                                <a href="profile-comments.html">комментариев</a>
-                            </div>
+                            <!-- иконка не закрашена, если 0 -->
+                            <a href="profile-articles.html" class="item articles">
+                                <span class="count">127</span>
+                                <i class="fa fa-file-text" title="Статьи"></i>
+                                <!--<span>статей</span>-->
+                            </a>
+                            <a href="profile-questions.html" class="item questions">
+                                <span class="count">354</span>
+                                <i class="fa fa-question" title="Вопросы"></i>
+                                <!--<span>вопроса</span>-->
+                            </a>
+                            <a href="profile-answers.html" class="item answers">
+                                <span class="count">12 933</span>
+                                <i class="fa fa-comments" title="Ответы"></i>
+                                <!--<span>ответов</span>-->
+                            </a>
+                            <a href="profile-comments.html" class="item comments">
+                                <span class="count">33 245</span>
+                                <i class="fa fa-comment" title="комментарии"></i>
+                                <!--<span>комментариев</span>-->
+                            </a>
                         </div>
                     </div>
                     <section id="content" class="white-section">
@@ -812,7 +818,7 @@
                         </div>
                     </section>
                 </div>
-                <div class="col-lg-3 hidden-md sidebar">
+                <div class="col-lg-3 col-md-12 sidebar">
                     <div class="widget widget-questions">
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
