--- a/app/profile-messages.html
+++ b/app/profile-messages.html
@@ -192,7 +192,7 @@
                                                     Уведомлений:
                                                     <span class="count">5 из 15</span>
                                                 </div>
-                                                <a href="#" class="pull-right">
+                                                <a href="profile-notifications.html" class="pull-right">
                                                     Все
                                                     <i class="fa fa-long-arrow-right pull-right"></i>
                                                 </a>
@@ -201,7 +201,7 @@
                                             <div class="container-body">
                                                 <ul class="list notifications-list">
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-notifications.html#item-1">
                                                             <i class="fa fa-thumbs-up info"></i>
                                                             <span class="small-text date">25 мин. назад</span>
                                                             <span class="text">
@@ -213,7 +213,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-notifications.html#item-2">
                                                             <i class="fa fa-comment success"></i>
                                                             <span class="small-text date">1 ч. назад</span>
                                                             <span class="text">
@@ -225,7 +225,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-notifications.html#item-3">
                                                             <i class="fa fa-user-plus success"></i>
                                                             <span class="small-text date">16 ч. назад</span>
                                                             <span class="text">
@@ -237,7 +237,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-notifications.html#item-4">
                                                             <i class="fa fa-trash danger"></i>
                                                             <span class="small-text date">2 д. назад</span>
                                                             <span class="text">
@@ -260,7 +260,7 @@
                                                     Сообщений:
                                                     <span class="count">3</span>
                                                 </div>
-                                                <a href="#" class="pull-right">
+                                                <a href="profile-messages.html" class="pull-right">
                                                     Все
                                                     <i class="fa fa-long-arrow-right pull-right"></i>
                                                 </a>
@@ -269,7 +269,7 @@
                                             <div class="container-body">
                                                 <ul class="list messages-list">
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-messages.html">
                                                             <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
@@ -281,7 +281,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-messages.html">
                                                             <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
@@ -293,7 +293,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">
+                                                        <a href="profile-messages.html">
                                                             <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
@@ -364,7 +364,7 @@
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
-                                            <i class="fa fa-bars dropdown-arrow"></i>
+                                            <i class="fa fa-bars"></i>
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
@@ -384,7 +384,7 @@
                                                     <li class="active"><a href="profile-messages.html"><i class="fa fa-plane"></i><span>Сообщения</span></a></li>
                                                     <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
                                                     <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
-                                                    <li class="notification"><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                                    <li><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -513,9 +513,9 @@
                                     </ul>
                                 </nav>
                                 <div class="search-section pull-right">
-                                    <form action="#" class="search-form" id="search-form-1">
+                                    <form action="search.html" method="GET" class="search-form" id="search-form-1">
                                         <div class="input-group">
-                                            <input type="text" placeholder="Поиск по сайту">
+                                            <input type="text" name="query" placeholder="Поиск по сайту">
                                             <span class="input-group-button">
                                                 <button type="submit" form="search-form-1" value="">
                                                     <i class="fa fa-search"></i>
@@ -532,9 +532,9 @@
 
             <div class="container-fluid">
                 <div class="search-section visible-sm visible-xs">
-                    <form action="#" class="search-form white-form" id="search-form-2">
+                    <form action="search.html" method="GET" class="search-form white-form" id="search-form-2">
                         <div class="input-group">
-                            <input type="text" placeholder="Поиск по сайту">
+                            <input type="text" name="query" placeholder="Поиск по сайту">
                             <span class="input-group-button">
                                 <button type="submit" form="search-form-2" value="" class="button accent-button">
                                     <i class="fa fa-search"></i>
@@ -964,7 +964,7 @@
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#" class="author">
+                                        <a href="profile.html" class="author">
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">1 минуту назад</span>
@@ -985,7 +985,7 @@
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#" class="author">
+                                        <a href="profile.html" class="author">
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">Сегодня в 12:23</span>
@@ -1005,7 +1005,7 @@
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
-                                        <a href="#" class="author">
+                                        <a href="profile.html" class="author">
                                             <span>Ivan</span>
                                         </a>
                                         <span class="date">23 августа</span>
